--- a/index.html
+++ b/index.html
@@ -358,5 +358,196 @@
       </div>
     </div>
     <!-- End Testimonials -->
+    <!-- Start Members -->
+    <div class="members" id="members">
+      <h2 class="main-title">Team members</h2>
+      <div class="container">
+        <div class="card">
+          <div class="data">
+            <img src="imgs/team-01.jpg" alt="team-01">
+            <div class="social">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="data">
+            <img src="imgs/team-02.jpg" alt="team-02">
+            <div class="social">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="data">
+            <img src="imgs/team-03.jpg" alt="team-03">
+            <div class="social">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="data">
+            <img src="imgs/team-04.jpg" alt="team-04">
+            <div class="social">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="data">
+            <img src="imgs/team-05.png" alt="team-05">
+            <div class="social">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="data">
+            <img src="imgs/team-06.png" alt="team-06">
+            <div class="social">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="data">
+            <img src="imgs/team-07.jpg" alt="team-07">
+            <div class="social">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="data">
+            <img src="imgs/team-08.jpg" alt="team-08">
+            <div class="social">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Members -->
 </body>
 </html>
