--- a/index.html
+++ b/index.html
@@ -549,5 +549,88 @@
       </div>
     </div>
     <!-- End Members -->
+    <!-- Start Services -->
+    <div class="services" id="services">
+      <h2 class="main-title">Services</h2>
+      <div class="container">
+        <div class="card">
+          <i class="service fas fa-user-shield fa-4x"></i>
+          <h3 class="title">Security</h3>
+          <div class="info">
+            <a href="#" class="details">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <i class="service fas fa-tools fa-4x"></i>
+          <h3 class="title">Fixing Issues</h3>
+          <div class="info">
+            <a href="#" class="details">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <i class="service fas fa-map-marked-alt fa-4x"></i>
+          <h3 class="title">Location</h3>
+          <div class="info">
+            <a href="#" class="details">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <i class="service fas fa-laptop-code fa-4x"></i>
+          <h3 class="title">Coding</h3>
+          <div class="info">
+            <a href="#" class="details">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <i class="service fas fa-palette fa-4x"></i>
+          <h3 class="title">Graphic Design</h3>
+          <div class="info">
+            <a href="#" class="details">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <i class="service fas fa-bullhorn fa-4x"></i>
+          <h3 class="title">Marketing</h3>
+          <div class="info">
+            <a href="#" class="details">Details</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Services -->
+    <!-- Start Skills -->
+    <div class="skills" id="skills">
+      <h2 class="main-title">Our Skills</h2>
+      <div class="container">
+        <img src="imgs/skills.png" alt="skills">
+        <div class="prog-container">
+          <div class="prog-holder">
+            <h3>HTML<span>80%</span></h3>
+            <div class="prog">
+              <span style="width: 80%" data-progress="80%"></span>
+            </div>
+          </div>
+          <div class="prog-holder">
+            <h3>CSS<span>85%</span></h3>
+            <div class="prog">
+              <span style="width: 85%" data-progress="85%"></span>
+            </div>
+          </div>
+          <div class="prog-holder">
+            <h3>JavaScript<span>70%</span></h3>
+            <div class="prog">
+              <span style="width: 70%" data-progress="70%"></span>
+            </div>
+          </div>
+          <div class="prog-holder">
+            <h3>Python<span>80%</span></h3>
+            <div class="prog">
+              <span style="width: 80%" data-progress="80%"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Skills -->
 </body>
 </html>
