--- a/index.html
+++ b/index.html
@@ -632,5 +632,42 @@
       </div>
     </div>
     <!-- End Skills -->
+    <!-- Start Steps -->
+    <div class="work-steps" id="work-steps">
+      <h2 class="main-title">How it works</h2>
+      <div class="container">
+        <img src="imgs/work-steps.png" alt="work-steps">
+        <div class="steps">
+          <div class="card">
+            <img src="imgs/work-steps-1.png" alt="step-1">
+            <div class="content">
+              <h3>Business Analysis</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="imgs/work-steps-2.png" alt="step-2">
+            <div class="content">
+              <h3>Architecture</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="imgs/work-steps-3.png" alt="step-3">
+            <div class="content">
+              <h3>Development</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Steps -->
 </body>
 </html>
