--- a/index.html
+++ b/index.html
@@ -32,5 +32,24 @@
       </div>
     </div>
     <!-- End Header -->
+    <!-- Start Landing -->
+    <div class="landing" id="landing">
+      <div class="container">
+        <div class="landing-text">
+          <h3 class="title">Welcome, to Elzero World</h3>
+          <span class="description">
+            Here I am gonna share everything about my life. Books I am reading,
+            Games I am playing, Stories and Events
+          </span>
+        </div>
+        <div class="landing-image">
+          <img src="./imgs/landing-image.png" alt="landing image" />
+        </div>
+      </div>
+      <a href="#articles">
+        <i class="fas fa-angle-double-down fa-2x"></i>
+      </a>
+    </div>
+    <!-- End Landing -->
   </body>
 </html>
