feat: finish landing section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <img src="./imgs/landing-image.png" alt="landing image" />
         </div>
       </div>
-      <a href="#articles">
+      <a href="#articles" class="go-down">
         <i class="fas fa-angle-double-down fa-2x"></i>
       </a>
     </div>
