--- a/index.html
+++ b/index.html
@@ -122,5 +122,11 @@
       </a>
     </div>
     <!-- End Landing -->
+    <!-- Start Articles -->
+    <div class="articles" id="articles">
+      <h2 class="main-title">Articles</h2>
+      <div class="container"></div>
+    </div>
+    <!-- End Articles -->
   </body>
 </html>
