feat: articles section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,120 @@
     <!-- Start Articles -->
     <div class="articles" id="articles">
       <h2 class="main-title">Articles</h2>
-      <div class="container"></div>
+      <div class="container">
+        <div class="card">
+          <img src="./imgs/cat-01.jpg" />
+          <div class="content">
+            <h3>Test Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a>Read More</a>
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./imgs/cat-02.jpg" />
+          <div class="content">
+            <h3>Test Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a href="#">Read More</a>
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./imgs/cat-03.jpg" />
+          <div class="content">
+            <h3>Test Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a>Read More</a>
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./imgs/cat-04.jpg" />
+          <div class="content">
+            <h3>Test Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a>Read More</a>
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./imgs/cat-05.jpg" />
+          <div class="content">
+            <h3>Test Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a>Read More</a>
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./imgs/cat-06.jpg" />
+          <div class="content">
+            <h3>Test Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a>Read More</a>
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./imgs/cat-07.jpg" />
+          <div class="content">
+            <h3>Test Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a>Read More</a>
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./imgs/cat-08.jpg" />
+          <div class="content">
+            <h3>Test Title</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Reprehenderit
+            </p>
+          </div>
+          <div class="info">
+            <a>Read More</a>
+            <i class="fas fa-long-arrow-alt-right"></i>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End Articles -->
   </body>
