feat: add gallery section

--- a/index.html
+++ b/index.html
@@ -241,5 +241,42 @@
       </div>
     </div>
     <!-- End Articles -->
+    <!-- Start Gallery -->
+    <div class="gallery" id="gallery">
+      <h2 class="main-title">Gallery</h2>
+      <div class="container">
+        <div class="item">
+          <div class="image">
+            <img src="./imgs/gallery-01.png" />
+          </div>
+        </div>
+        <div class="item">
+          <div class="image">
+            <img src="./imgs/gallery-02.png" />
+          </div>
+        </div>
+        <div class="item">
+          <div class="image">
+            <img src="./imgs/gallery-03.jpg" />
+          </div>
+        </div>
+        <div class="item">
+          <div class="image">
+            <img src="./imgs/gallery-04.png" />
+          </div>
+        </div>
+        <div class="item">
+          <div class="image">
+            <img src="./imgs/gallery-05.jpg" />
+          </div>
+        </div>
+        <div class="item">
+          <div class="image">
+            <img src="./imgs/gallery-06.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Gallery -->
   </body>
 </html>
