feat: features section

--- a/index.html
+++ b/index.html
@@ -278,5 +278,51 @@
       </div>
     </div>
     <!-- End Gallery -->
+    <!-- Start Features -->
+    <div class="features" id="features">
+      <h2 class="main-title">Features</h2>
+      <div class="container">
+        <div class="feature quality">
+          <div class="image">
+            <img src="./imgs/features-01.jpg" alt="Quality" />
+          </div>
+          <div class="content">
+            <h3 class="title">Quality</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              harum hic veniam eligendi minima
+            </p>
+            <a href="#" class="more">More</a>
+          </div>
+        </div>
+        <div class="feature time">
+          <div class="image">
+            <img src="./imgs/features-02.jpg" alt="Time" />
+          </div>
+          <div class="content">
+            <h3 class="title">Time</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              harum hic veniam eligendi minima
+            </p>
+            <a href="#" class="more">More</a>
+          </div>
+        </div>
+        <div class="feature passion">
+          <div class="image">
+            <img src="./imgs/features-03.jpg" alt="Passion" />
+          </div>
+          <div class="content">
+            <h3 class="title">Passion</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+              harum hic veniam eligendi minima
+            </p>
+            <a href="#" class="more">More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Features -->
   </body>
 </html>
