feat: testimonials section

--- a/index.html
+++ b/index.html
@@ -324,5 +324,114 @@
       </div>
     </div>
     <!-- End Features -->
+    <!-- Start Testimonials -->
+    <div class="testimonials" id="testimonials">
+      <h2 class="main-title">Testimonials</h2>
+      <div class="container">
+        <div class="card">
+          <img src="./imgs/avatar-01.png" alt="Avatar" />
+          <h3 class="name">Mohamed Farag</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="stars">
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="far fa-star"></i>
+          </div>
+          </span>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="card">
+          <img src="./imgs/avatar-02.png" alt="Avatar" />
+          <h3 class="name">Mohamed Ibrahim</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="stars">
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="far fa-star"></i>
+            </div>
+          </span>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="card">
+          <img src="./imgs/avatar-03.png" alt="Avatar" />
+          <h3 class="name">Shady Nabil</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="stars">
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="far fa-star"></i>
+            </div>
+          </span>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="card">
+          <img src="./imgs/avatar-04.png" alt="Avatar" />
+          <h3 class="name">Amr Hendawy</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="stars">
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            </div>
+          </span>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="card">
+          <img src="./imgs/avatar-05.png" alt="Avatar" />
+          <h3 class="name">Sherief Ashraf</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="stars">
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
+            </div>
+          </span>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="card">
+          <img src="./imgs/avatar-06.png" alt="Avatar" />
+          <h3 class="name">Osama Mohamed</h3>
+          <span class="title">Full Stack Developer</span>
+          <div class="stars">
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="filled fas fa-star"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
+            </div>
+          </span>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- End Testimonials -->
   </body>
 </html>
