--- a/index.html
+++ b/index.html
@@ -624,5 +624,72 @@
       </div>
     </div>
     <!-- End Team -->
+    <!-- Start Services -->
+     <div class="services" id="services">
+      <h2 class="main-title">Services</h2>
+      <div class="container">
+        <div class="card">
+          <div class="content">
+            <i class="fas fa-user-shield fa-4x"></i>
+            <h3 class="title">Security</h3>
+          </div>
+          <div class="footer">
+            <span class="index">01</span>
+            <a href="#" class="link">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <i class="fas fa-tools fa-4x"></i>
+            <h3 class="title">Fixing Issues</h3>
+          </div>
+          <div class="footer">
+            <span class="index">02</span>
+            <a href="#" class="link">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <i class="fas fa-map-marked-alt fa-4x"></i>
+            <h3 class="title">Location</h3>
+          </div>
+          <div class="footer">
+            <span class="index">03</span>
+            <a href="#" class="link">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <i class="fas fa-laptop-code fa-4x"></i>
+            <h3 class="title">Coding</h3>
+          </div>
+          <div class="footer">
+            <span class="index">04</span>
+            <a href="#" class="link">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <i class="fas fa-palette fa-4x"></i>
+            <h3 class="title">Design</h3>
+          </div>
+          <div class="footer">
+            <span class="index">05</span>
+            <a href="#" class="link">Details</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <i class="fas fa-bullhorn fa-4x"></i>
+            <h3 class="title">Marketing</h3>
+          </div>
+          <div class="footer">
+            <span class="index">06</span>
+            <a href="#" class="link">Details</a>
+          </div>
+        </div>
+      </div>
+     </div>
+    <!-- End Services -->
   </body>
 </html>
