feat: our skills section

--- a/index.html
+++ b/index.html
@@ -691,5 +691,53 @@
       </div>
      </div>
     <!-- End Services -->
+    <!-- Start Skills -->
+    <div class="our-skills" id="our-skills">
+      <h3 class="main-title">Our Skills</h3>
+      <div class="container">
+        <div class="image">
+          <img src="./imgs/skills.png" alt="Skills"/>
+        </div>
+        <div class="skills">
+          <div class="skill">
+            <div class="info">
+              <h3 class="title">HTML</h3>
+              <span class="value">80%</span>
+            </div>
+            <div class="progress" data-value="80">
+              <span class="bar" style="width: 80%;"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="info">
+              <h3 class="title">CSS</h3>
+              <span class="value">85%</span>
+            </div>
+            <div class="progress" data-value="85">
+              <span class="bar" style="width: 85%;"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="info">
+              <h3 class="title">JavaScript</h3>
+              <span class="value">70%</span>
+            </div>
+            <div class="progress" data-value="70">
+              <span class="bar" style="width: 70%;"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="info">
+              <h3 class="title">Python</h3>
+              <span class="value">80%</span>
+            </div>
+            <div class="progress" data-value="80">
+              <span class="bar" style="width: 80%;"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Skills -->
   </body>
 </html>
