feat: add work steps section

--- a/index.html
+++ b/index.html
@@ -739,5 +739,47 @@
       </div>
     </div>
     <!-- End Skills -->
+    <!-- Start Steps -->
+    <div class="work-steps" id="work-steps">
+      <h2 class="main-title">How It Works</h2>
+      <div class="container">
+        <div class="image">
+          <img src="./imgs/work-steps.png" alt="Work Steps">
+        </div>
+        <div class="steps">
+          <div class="step">
+            <img src="./imgs/work-steps-1.png" alt="">
+            <div class="content">
+              <h3 class="title">Business Analysis</h3>
+              <p class="description">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="step">
+            <img src="./imgs/work-steps-2.png" alt="">
+            <div class="content">
+              <h3 class="title">Architecture</h3>
+              <p class="description">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+          <div class="step">
+            <img src="./imgs/work-steps-3.png" alt="">
+            <div class="content">
+              <h3 class="title">Development</h3>
+              <p class="description">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Steps -->
   </body>
 </html>
