feat: events sections

--- a/index.html
+++ b/index.html
@@ -781,5 +781,49 @@
       </div>
     </div>
     <!-- End Steps -->
+    <!-- Start Events -->
+    <div class="events" id="events">
+      <h2 class="main-title">Latest Events</h2>
+      <div class="container">
+        <div class="dots dots-up"></div>
+        <div class="dots dots-down"></div>
+        <div class="event">
+          <img src="./imgs/events.png" alt="Events">
+          <div class="content">
+            <div class="counter">
+              <div class="count">
+                <span class="number">15</span>
+                <span class="unit">Days</span>
+              </div>
+              <div class="count">
+                <span class="number">08</span>
+                <span class="unit">Hours</span>
+              </div>
+              <div class="count">
+                <span class="number">45</span>
+                <span class="unit">Minutes</span>
+              </div>
+              <div class="count">
+                <span class="number">55</span>
+                <span class="unit">Seconds</span>
+              </div>
+            </div>
+            <h3 class="title">Tech Masters Event 2021</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Et vero tenetur doloremque iusto ut adipisci quam ratione 
+              aliquam excepturi nulla in harum, veritatis porro
+            </p>
+          </div>
+        </div>
+        <div class="subscribe">
+          <form action>
+            <input type="email" name="" id="" placeholder="Enter Your Email"/>
+            <input type="submit" value="Subscribe" />
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- End Events -->
   </body>
 </html>
