--- a/index.html
+++ b/index.html
@@ -339,7 +339,6 @@
             <i class="filled fas fa-star"></i>
             <i class="far fa-star"></i>
           </div>
-          </span>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
             reiciendis voluptatum, amet est natus quaerat ducimus
@@ -355,8 +354,7 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
             <i class="far fa-star"></i>
-            </div>
-          </span>
+          </div>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
             reiciendis voluptatum, amet est natus quaerat ducimus
@@ -372,8 +370,7 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
             <i class="far fa-star"></i>
-            </div>
-          </span>
+          </div>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
             reiciendis voluptatum, amet est natus quaerat ducimus
@@ -389,8 +386,7 @@
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
             <i class="filled fas fa-star"></i>
-            </div>
-          </span>
+          </div>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
             reiciendis voluptatum, amet est natus quaerat ducimus
@@ -406,8 +402,7 @@
             <i class="filled fas fa-star"></i>
             <i class="far fa-star"></i>
             <i class="far fa-star"></i>
-            </div>
-          </span>
+          </div>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
             reiciendis voluptatum, amet est natus quaerat ducimus
@@ -423,8 +418,7 @@
             <i class="filled fas fa-star"></i>
             <i class="far fa-star"></i>
             <i class="far fa-star"></i>
-            </div>
-          </span>
+          </div>
           <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
             reiciendis voluptatum, amet est natus quaerat ducimus
@@ -625,7 +619,7 @@
     </div>
     <!-- End Team -->
     <!-- Start Services -->
-     <div class="services" id="services">
+    <div class="services" id="services">
       <h2 class="main-title">Services</h2>
       <div class="container">
         <div class="card">
@@ -689,14 +683,14 @@
           </div>
         </div>
       </div>
-     </div>
+    </div>
     <!-- End Services -->
     <!-- Start Skills -->
     <div class="our-skills" id="our-skills">
       <h3 class="main-title">Our Skills</h3>
       <div class="container">
         <div class="image">
-          <img src="./imgs/skills.png" alt="Skills"/>
+          <img src="./imgs/skills.png" alt="Skills" />
         </div>
         <div class="skills">
           <div class="skill">
@@ -705,7 +699,7 @@
               <span class="value">80%</span>
             </div>
             <div class="progress" data-value="80">
-              <span class="bar" style="width: 80%;"></span>
+              <span class="bar" style="width: 80%"></span>
             </div>
           </div>
           <div class="skill">
@@ -714,7 +708,7 @@
               <span class="value">85%</span>
             </div>
             <div class="progress" data-value="85">
-              <span class="bar" style="width: 85%;"></span>
+              <span class="bar" style="width: 85%"></span>
             </div>
           </div>
           <div class="skill">
@@ -723,7 +717,7 @@
               <span class="value">70%</span>
             </div>
             <div class="progress" data-value="70">
-              <span class="bar" style="width: 70%;"></span>
+              <span class="bar" style="width: 70%"></span>
             </div>
           </div>
           <div class="skill">
@@ -732,7 +726,7 @@
               <span class="value">80%</span>
             </div>
             <div class="progress" data-value="80">
-              <span class="bar" style="width: 80%;"></span>
+              <span class="bar" style="width: 80%"></span>
             </div>
           </div>
         </div>
@@ -744,36 +738,36 @@
       <h2 class="main-title">How It Works</h2>
       <div class="container">
         <div class="image">
-          <img src="./imgs/work-steps.png" alt="Work Steps">
+          <img src="./imgs/work-steps.png" alt="Work Steps" />
         </div>
         <div class="steps">
           <div class="step">
-            <img src="./imgs/work-steps-1.png" alt="">
+            <img src="./imgs/work-steps-1.png" alt="" />
             <div class="content">
               <h3 class="title">Business Analysis</h3>
               <p class="description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
               </p>
             </div>
           </div>
           <div class="step">
-            <img src="./imgs/work-steps-2.png" alt="">
+            <img src="./imgs/work-steps-2.png" alt="" />
             <div class="content">
               <h3 class="title">Architecture</h3>
               <p class="description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
               </p>
             </div>
           </div>
           <div class="step">
-            <img src="./imgs/work-steps-3.png" alt="">
+            <img src="./imgs/work-steps-3.png" alt="" />
             <div class="content">
               <h3 class="title">Development</h3>
               <p class="description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim
+                nesciunt obcaecati quisquam quis laborum recusandae debitis vel
               </p>
             </div>
           </div>
@@ -788,7 +782,7 @@
         <div class="dots dots-up"></div>
         <div class="dots dots-down"></div>
         <div class="event">
-          <img src="./imgs/events.png" alt="Events">
+          <img src="./imgs/events.png" alt="Events" />
           <div class="content">
             <div class="counter">
               <div class="count">
@@ -810,20 +804,126 @@
             </div>
             <h3 class="title">Tech Masters Event 2021</h3>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Et vero tenetur doloremque iusto ut adipisci quam ratione 
-              aliquam excepturi nulla in harum, veritatis porro
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero
+              tenetur doloremque iusto ut adipisci quam ratione aliquam
+              excepturi nulla in harum, veritatis porro
             </p>
           </div>
         </div>
         <div class="subscribe">
           <form action>
-            <input type="email" name="" id="" placeholder="Enter Your Email"/>
+            <input type="email" name="" id="" placeholder="Enter Your Email" />
             <input type="submit" value="Subscribe" />
           </form>
         </div>
       </div>
     </div>
     <!-- End Events -->
+    <!-- Start Pricing -->
+    <div class="pricing" id="pricing">
+      <h2 class="main-title">Pricing Plans</h2>
+      <div class="dots dots-up"></div>
+      <div class="dots dots-down"></div>
+      <div class="container">
+        <div class="card">
+          <h3 class="title">Basic</h3>
+          <img src="./imgs/hosting-basic.png" alt="Hosting Basic" />
+          <div class="price">
+            <span class="amount">$15</span>
+            <span class="period">Per Month</span>
+          </div>
+          <ul>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">10GB HDD Space</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">5 Email Addresses</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">2 Subdomains</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">4 Databases</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">Basic Support</span>
+            </li>
+          </ul>
+          <a href="#" class="plan">Choose Plan</a>
+        </div>
+        <div class="card">
+          <div class="label">Most Popular</div>
+          <h3 class="title">Advanced</h3>
+          <img src="./imgs/hosting-advanced.png" alt="Hosting Advanced" />
+          <div class="price">
+            <span class="amount">$25</span>
+            <span class="period">Per Month</span>
+          </div>
+          <ul>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">20GB HDD Space</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">10 Email Addresses</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">5 Subdomains</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">8 Databases</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">Advanced Support</span>
+            </li>
+          </ul>
+          <a href="#" class="plan">Choose Plan</a>
+        </div>
+        <div class="card">
+          <h3 class="title">Professional</h3>
+          <img
+            src="./imgs/hosting-professional.png"
+            alt="Hosting Professional"
+          />
+          <div class="price">
+            <span class="amount">$45</span>
+            <span class="period">Per Month</span>
+          </div>
+          <ul>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">50GB HDD Space</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">20 Email Addresses</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">10 Subdomains</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">20 Databases</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <span class="feature">Professional Support</span>
+            </li>
+          </ul>
+          <a href="#" class="plan">Choose Plan</a>
+        </div>
+      </div>
+    </div>
+    <!-- End Pricing -->
   </body>
 </html>
