--- a/index.html
+++ b/index.html
@@ -925,5 +925,56 @@
       </div>
     </div>
     <!-- End Pricing -->
+    <!-- Start Videos -->
+    <div class="videos" id="videos">
+      <h2 class="main-title">Top Videos</h2>
+      <div class="container">
+        <div class="holder">
+          <div class="list">
+            <div class="title">
+              <span>Top Videos</span>
+              <i class="fas fa-random"></i>
+            </div>
+            <ul>
+              <li>
+                How To Create Sub Domain
+                <span class="length">05:18</span>
+              </li>
+              <li>
+                Playing With The DNS
+                <span class="length">03:18</span>
+              </li>
+              <li>
+                Everything About The Virtual Hosts
+                <span class="length">05:25</span>
+              </li>
+              <li>
+                How To Monitor Your Website
+                <span class="length">04:16</span>
+              </li>
+              <li>
+                Uncharted Beating The Last Boss
+                <span class="length">07:48</span>
+              </li>
+              <li>
+                Ys Oath In Felghana Overview
+                <span class="length">03:12</span>
+              </li>
+              <li>
+                Ys Series All Games Ending
+                <span class="length">08:10</span>
+              </li>
+            </ul>
+          </div>
+          <div class="video">
+            <div class="image">
+              <img src="./imgs/video-preview.jpg" alt="Video" />
+            </div>
+            <div class="video-title">Everything About The Virtual Hosts</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Videos -->
   </body>
 </html>
