--- a/index.html
+++ b/index.html
@@ -976,5 +976,32 @@
       </div>
     </div>
     <!-- End Videos -->
+    <!-- Start Stats -->
+    <div class="stats" id="stats">
+      <h2 class="section-title">Our Awesome Stats</h2>
+      <div class="container">
+        <div class="card">
+          <i class="far fa-user fa-2x fa-fw"></i>
+          <span class="number">150</span>
+          <span class="label">Clients</span>
+        </div>
+        <div class="card">
+          <i class="fas fa-code fa-2x fa-fw"></i>
+          <span class="number">135</span>
+          <span class="label">Projects</span>
+        </div>
+        <div class="card">
+          <i class="fas fa-globe-asia fa-2x fa-fw"></i>
+          <span class="number">50</span>
+          <span class="label">Countries</span>
+        </div>
+        <div class="card">
+          <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
+          <span class="number">500</span>
+          <span class="label">Money</span>
+        </div>
+      </div>
+    </div>
+    <!-- End Stats -->
   </body>
 </html>
