feat: discount section

--- a/index.html
+++ b/index.html
@@ -1003,5 +1003,35 @@
       </div>
     </div>
     <!-- End Stats -->
+    <!-- Start Discount -->
+    <div class="discount" id="discount">
+      <div class="content">
+        <h2 class="title">We Have A Discount</h2>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
+          asperiores consectetur, recusandae ratione provident necessitatibus,
+          cumque delectus commodi fuga praesentium beatae. Totam vel similique
+          laborum dicta aperiam odit doloribus corporis.
+        </p>
+        <img src="./imgs/discount.png" alt="Discount" />
+      </div>
+      <div class="request">
+        <div class="form">
+          <h2 class="title">Request A Discount</h2>
+          <form action>
+            <input type="text" placeholder="Your Name" />
+            <input type="text" placeholder="Your Email" />
+            <input type="text" placeholder="Your Phone" />
+            <textarea
+              name="needs"
+              id=""
+              placeholder="Tell Us About Your Needs"
+            ></textarea>
+            <input type="submit" value="Send" />
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- End Discount -->
   </body>
 </html>
