feat: footer section

--- a/index.html
+++ b/index.html
@@ -1033,5 +1033,79 @@
       </div>
     </div>
     <!-- End Discount -->
+    <!-- Start Footer -->
+    <div class="page-footer">
+      <div class="container">
+        <div class="socials">
+          <h3 class="title">Elzero</h3>
+          <div class="accounts">
+            <a href="#" class="social fb"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social twr"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social ytb"><i class="fab fa-youtube"></i></a>
+          </div>
+          <p class="description">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus
+            nulla rem, dignissimos iste aspernatur
+          </p>
+        </div>
+        <ul class="links">
+          <li>
+            <a href="#" class="link">
+              <i class="fa fa-angle-double-right"></i> Important Link 1
+            </a>
+          </li>
+          <li>
+            <a href="#" class="link">
+              <i class="fa fa-angle-double-right"></i> Important Link 2
+            </a>
+          </li>
+          <li>
+            <a href="#" class="link">
+              <i class="fa fa-angle-double-right"></i> Important Link 3
+            </a>
+          </li>
+          <li>
+            <a href="#" class="link">
+              <i class="fa fa-angle-double-right"></i> Important Link 4
+            </a>
+          </li>
+          <li>
+            <a href="#" class="link">
+              <i class="fa fa-angle-double-right"></i> Important Link 5
+            </a>
+          </li>
+        </ul>
+        <div class="contacts">
+          <div class="contact">
+            <i class="fas fa-map-marker-alt fa-fw"></i>
+            <div class="address">
+              <span class="subaddress"> Egypt, Giza, Inside The Sphinx, </span>
+              <span class="subaddress">Room Number 220</span>
+            </div>
+          </div>
+          <div class="contact">
+            <i class="far fa-clock fa-fw"></i>
+            <span class="schedule"> Business Hours: From 10:00 To 18:00 </span>
+          </div>
+          <div class="contact">
+            <i class="fas fa-phone-volume fa-fw"></i>
+            <div class="phone">
+              <span class="number">+20123456789</span>
+              <span class="number">+20198765432</span>
+            </div>
+          </div>
+        </div>
+        <div class="mini-gallery">
+          <img src="./imgs/gallery-01.png" />
+          <img src="./imgs/gallery-02.png" />
+          <img src="./imgs/gallery-03.jpg" />
+          <img src="./imgs/gallery-04.png" />
+          <img src="./imgs/gallery-05.jpg" />
+          <img src="./imgs/gallery-06.png" />
+        </div>
+      </div>
+      <div class="copyright">Made With &lt;3 By Amjed</div>
+    </div>
+    <!-- End Footer -->
   </body>
 </html>
