feat: footer responsive and spikes separators

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
         </div>
       </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Articles -->
     <!-- Start Gallery -->
     <div class="gallery" id="gallery">
@@ -617,6 +618,7 @@
         </div>
       </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Team -->
     <!-- Start Services -->
     <div class="services" id="services">
